[tool.poetry]
name = "trello-api-automation"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman <ckcarlosdesign@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
flake8 = "^3.8.4"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
